--- a/components/Reviews/Reviews.module.css
+++ b/components/Reviews/Reviews.module.css
@@ -5,8 +5,9 @@
 
 .title {
     font-family: var(--second-family);
-        font-weight: 400;
-        font-size: 48px;
-        line-height: 120%;
-        letter-spacing: -0.01em;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 120%;
+    letter-spacing: -0.01em;
+    margin-bottom: 40px;
 }
