--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
 :root {
---color-scheme-1-background: var(--color-deco-lightest);
+  --color-scheme-1-background: var(--color-deco-lightest);
   --color-neutral-darkest: #000;
   --color-scheme-1-border: var(--opacity-neutral-darkest-20);
   --color-scheme-1-text: var(--color-neutral-darkest);
@@ -63,8 +63,8 @@
   --color-scheme-6-foreground: var(--color-deco-dark);
   --color-red: #9d0000;
 
-  --font-inter: 'Inter', sans-serif;
-  --second-family: 'Nunito Sans', sans-serif;
+  --font-inter: "Inter", sans-serif;
+  --second-family: "Nunito Sans", sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -96,6 +96,9 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+li {
+  list-style: none;
 }
 
 @media (prefers-color-scheme: dark) {
