--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -4,35 +4,40 @@
 .containerFooter {
   padding: 48px 20px;
 }
+.logo {
+  margin-bottom: 40px;
+}
 .linksContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+.containerWrap {
+  margin-bottom: 40px;
+}
 .menu {
   font-weight: 600;
   font-size: 16px;
   line-height: 150%;
+  margin-bottom: 16px;
 }
 .navigationList {
   display: flex;
   align-items: center;
   flex-direction: column;
   gap: 8px;
+  margin-bottom: 32px;
 }
 .navigation {
   font-weight: 400;
   font-size: 14px;
   line-height: 150%;
 }
-.subscribeContainer {
-  margin-bottom: 40px;
-}
+
 .subscribe {
   font-weight: 600;
   font-size: 16px;
   line-height: 150%;
-
   margin-bottom: 16px;
 }
 .text {
@@ -43,16 +48,19 @@
 }
 .containerSubscribe {
   display: flex;
+  align-items: center;
   gap: 16px;
 }
 
 .input {
+  outline: none;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 16px;
   padding: 8px;
   width: 195px;
   height: 40px;
   background: rgba(255, 255, 255, 0);
+  color: #000;
 }
 .input::placeholder {
   font-weight: 400;
@@ -61,11 +69,11 @@
   color: rgba(0, 0, 0, 0.6);
 }
 .button {
-  border: 1px solid rgba(255, 255, 255, 0);
-  border-radius: 100px;
-  padding: 6px 12px;
-  width: 124px;
-  height: 36px;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 16px;
+  padding: 8px;
+  width: 195px;
+  height: 40px;
   background: rgba(0, 0, 0, 0.05);
   font-weight: 500;
   font-size: 16px;
@@ -81,10 +89,125 @@
   font-size: 14px;
   line-height: 150%;
   margin-bottom: 16px;
+  text-align: center;
 }
 .socialContainer {
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 18px;
+}
+@media screen and (min-width: 768px) {
+  .containerFooter {
+    padding: 48px 32px;
+  }
+  .containerWrap {
+    display: flex;
+    flex-direction: row;
+    gap: 77px;
+  }
+  .linksContainer {
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 40px;
+  }
+  .menu {
+    font-size: 14px;
+  }
+  .navigation {
+    font-size: 12px;
+  }
+  .navigation:hover {
+    font-weight: 600;
+  }
+  .navigationList {
+    align-items: flex-start;
+  }
+  .subscribe {
+    font-size: 14px;
+  }
+  .text {
+    font-size: 14px;
+  }
+  .input {
+    width: 273px;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .input::placeholder {
+    font-size: 14px;
+  }
+  .input:focus,
+  .input:hover {
+    border: 1px solid #3b4331;
+  }
+  .button {
+    width: 111px;
+    height: 33px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition:
+      background 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .button:hover,
+  .button:focus {
+    background: #9db484;
+  }
+  .button:active {
+    background: #3b4331;
+    color: #fff;
+  }
+  .button:disabled {
+    background: #c5e1a5;
+    opacity: 0.4;
+    color: #000;
+  }
+  .socials {
+    display: flex;
+    justify-content: space-between;
+  }
+  .socialLinks {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .socialLinks:hover {
+    fill: white;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .containerFooter {
+    padding: 80px 64px;
+  }
+  .containerWrap {
+    justify-content: space-between;
+  }
+  .linksContainer {
+    gap: 322px;
+  }
+
+  .menu {
+    font-size: 16px;
+  }
+  .navigation {
+    font-size: 14px;
+  }
+  .navigationList {
+    align-items: flex-start;
+  }
+  .subscribe {
+    font-size: 16px;
+  }
+  .text {
+    font-size: 16px;
+  }
+  .input {
+    width: 260px;
+  }
+  .input::placeholder {
+    font-size: 16px;
+  }
+  .button {
+    width: 124px;
+    height: 36px;
+  }
 }
