--- a/components/Reviews/Reviews.module.css
+++ b/components/Reviews/Reviews.module.css
@@ -31,6 +31,7 @@
     line-height: 140%;
     letter-spacing: -0.01em;
     margin-bottom: 32px;
+    min-height: 75px;
 }
 
 .name {
@@ -96,12 +97,8 @@
     }
 
     .text {
-        font-family: var(--second-family);
-        font-weight: 400;
         font-size: 20px;
-        line-height: 140%;
-        letter-spacing: -0.01em;
-        margin-bottom: 32px;
+        min-height: 56px;
     }
 }
 
