--- a/components/Reviews/Reviews.module.css
+++ b/components/Reviews/Reviews.module.css
@@ -69,6 +69,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    transition: background 250ms ease-in-out;
 }
 
 .btnPrev:hover,
