--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -3,6 +3,44 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 20px;
+    padding-top: 64px;
+    gap: 32px;
+    max-width: 375px;
+}
+
+.hero_text, .link_primary, .link_secondary {
+    font-family: var(--font-inter);
+}
+
+.hero_text {
+    margin-top: 24px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 150%;
+}
+
+.hero_links {
+    margin-top: 38px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    justify-content: center;
+    align-items: center;
+}
+
+.link_primary, .link_secondary {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+}
+
+.hero_title {
+    font-family: var(--second-family);
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 120%;
+    letter-spacing: -0.01em;
 }
 
 .link_primary {
@@ -10,12 +48,67 @@
     justify-content: center;
     background-color: var(--color-scheme-1-accent);
     padding: 6px 12px;
+    min-width: 320px;
     width: 100%;
     border-radius: 100px;
     text-decoration: none;
 }
 
 .link_secondary {
-    color: var(--color-scheme-1-foreground);
+    display: flex;
+    justify-content: center;
+    background-color: var(--opacity-neutral-darkest-5);
+    padding: 6px 12px;
+    min-width: 320px;
+    width: 100%;
+    border-radius: 100px;
     text-decoration: none;
+}
+
+.hero_image {
+    margin-top: 32px;
+    border-radius: 16px;
+}
+
+.text_wrapper {
+    flex-direction: column;
+}
+
+@media only screen and (min-width: 768px) {
+  .hero {
+    flex-direction: row;
+    max-width: 768px;
+  }
+
+  .hero_content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+
+  .hero_links {
+    justify-content: start;
+    flex-direction: row;
+    gap: 16px;
+  }
+
+  .link_primary{
+    min-width: 110px;
+  }
+
+    .link_secondary {
+        min-width: 182px;
+    }
+
+    .hero_image {
+        margin-top: 0;
+    }
+} 
+
+@media only screen and (min-width: 1440px) {
+    .hero {
+        max-width: 1440px;
+        justify-content: center;
+    }
 }
