--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -7,6 +7,7 @@
     padding-top: 64px;
     gap: 32px;
     max-width: 375px;
+    margin: 0 auto;
 }
 
 .hero_text, .link_primary, .link_secondary {
@@ -18,6 +19,10 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 150%;
+}
+
+.hero_content {
+    margin: 0 auto;
 }
 
 .hero_links {
@@ -54,6 +59,22 @@
     text-decoration: none;
 }
 
+.link_primary:hover {
+    background-color: var(--color-deco-dark);
+}
+
+.link_primary:active {
+    background-color: var(--color-deco-darkest);
+}
+
+.link_secondary:hover {
+    background-color: var(--opacity-neutral-darkest-50);
+}
+
+.link_secondary:active {
+    background-color: var(--opacity-neutral-darkest-15);
+}
+
 .link_secondary {
     display: flex;
     justify-content: center;
@@ -77,6 +98,7 @@
 @media only screen and (min-width: 768px) {
   .hero {
     flex-direction: row;
+    padding: 64px 32px;
     max-width: 768px;
   }
 
@@ -108,7 +130,8 @@
 
 @media only screen and (min-width: 1440px) {
     .hero {
-        max-width: 1440px;
+        max-width: 1312px;
+        padding: 112px 0;
         justify-content: center;
     }
 }
