--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -13,8 +13,12 @@
   padding: 6px;
   width: 36px;
   height: 36px;
-  background-color: var(--color-deco);
+  background-color: var(--color-scheme-5-foreground);
   margin-right: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 .buttonSvg {
   fill: #000;
@@ -26,6 +30,12 @@
   width: 36px;
   height: 36px;
   background: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+   position: relative;
 }
 .basketButtonSvg {
   fill: #fff;
@@ -52,34 +62,64 @@
   padding: 6px;
   width: 36px;
   height: 36px;
-  background-color: var(--color-deco);
+  background-color: var(--color-scheme-5-foreground);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 .mobileActions {
   margin-top: 64px;
 }
-@media screen and (min-width: 768px) {
-  .header {
-  justify-content: space-around;
+.mobileButtons{
+  display: flex;
 }
+.basketWrapper {
+  position: relative;
+  display: inline-block;
+}
+.badge {
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(40%, -40%);
+  background-color: #b70000;
+  border: 1px solid #b70000;
+  color: #fff;;
+  font-size: 10px;
+  font-weight: 400;
+  width: 11px;
+  height: 12px;
+  padding: 1px 3px;
+  border-radius: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (min-width: 768px) {
+  .basketBtn:hover{
+    transform: scale(1.3);
+  }
   .navigation {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 32px;
+    margin-right: 86px;
   }
-  .navigationList {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 86px;
-  }
-
   .authNavigation {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     gap: 16px;
+  }
+   .navigationList {
+    display: flex;
+    flex-direction: row;
+   justify-content: space-between;
+    align-items: center;
+    
   }
   .navigationItem {
     text-decoration: none;
@@ -91,14 +131,15 @@
   }
   .navigationItem:hover,
   .navigationItem:active {
-    color: var(--color-deco-darkest);
+    color: var(--color-deco-dark);
   }
+
 }
 @media screen and (min-width: 1440px) {
-   .header {
-  justify-content:space-between;
-}
   .navigationLink {
     font-size: 16px;
+  }
+  .navigation {
+    margin-right: 370px;
   }
 }
