--- a/app/globals.css
+++ b/app/globals.css
@@ -101,6 +101,10 @@ li {
   list-style: none;
 }
 
+button {
+  cursor: pointer;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
