--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -6,6 +6,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+}
+.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: var(--color-deco-light);
+  z-index: 1000;
+  
 }
 .burgerButton {
   border: 1px solid rgba(0, 0, 0, 0.05);
@@ -35,7 +45,7 @@
   align-items: center;
   cursor: pointer;
   transition: transform 0.3s ease-in-out;
-   position: relative;
+  position: relative;
 }
 .basketButtonSvg {
   fill: #fff;
@@ -49,6 +59,17 @@
 }
 .mobileMenu {
   padding: 40px 0 278px;
+  animation: slideDown 0.4s ease forwards;
+}
+@keyframes slideDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-10%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 .navigationItemMobile {
   list-style-type: none;
@@ -71,7 +92,7 @@
 .mobileActions {
   margin-top: 64px;
 }
-.mobileButtons{
+.mobileButtons {
   display: flex;
 }
 .basketWrapper {
@@ -85,7 +106,7 @@
   transform: translate(40%, -40%);
   background-color: #b70000;
   border: 1px solid #b70000;
-  color: #fff;;
+  color: #fff;
   font-size: 10px;
   font-weight: 400;
   width: 11px;
@@ -97,7 +118,7 @@
   justify-content: center;
 }
 @media screen and (min-width: 768px) {
-  .basketBtn:hover{
+  .basketBtn:hover {
     transform: scale(1.3);
   }
   .navigation {
@@ -114,12 +135,11 @@
     align-items: center;
     gap: 16px;
   }
-   .navigationList {
+  .navigationList {
     display: flex;
     flex-direction: row;
-   justify-content: space-between;
+    justify-content: space-between;
     align-items: center;
-    
   }
   .navigationItem {
     text-decoration: none;
@@ -133,7 +153,6 @@
   .navigationItem:active {
     color: var(--color-deco-dark);
   }
-
 }
 @media screen and (min-width: 1440px) {
   .navigationLink {
