--- a/components/Hero/Hero.module.css
+++ b/components/Hero/Hero.module.css
@@ -54,6 +54,7 @@
     max-width: 335px;
     border-radius: 100px;
     text-decoration: none;
+    transition: all 250ms ease-in-out;
 }
 
 .link_primary:hover {
@@ -65,7 +66,7 @@
 }
 
 .link_secondary:hover {
-    background-color: var(--opacity-neutral-darkest-50);
+    background: var(--opacity-neutral-darkest-15);
 }
 
 .link_secondary:active {
@@ -82,6 +83,7 @@
     max-width: 335px;
     border-radius: 100px;
     text-decoration: none;
+    transition: all 250ms ease-in-out;
 }
 
 .hero_image {
@@ -121,7 +123,7 @@
   }
 
     .link_secondary {
-        min-width: 182px;
+        min-width: 183px;
     }
 
     .hero_image {
