--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,19 +1,17 @@
 .section {
-    padding: 18px 0;
-    background-color: var(--color-deco-light);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
+  padding: 18px 0;
+  background-color: var(--color-deco-light);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
 }
-
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
 .burgerButton {
   border: 1px solid rgba(0, 0, 0, 0.05);
   border-radius: 100px;
@@ -50,13 +48,19 @@
 .navigationMobile {
   display: flex;
   flex-direction: column;
-  gap: 32px;
   justify-content: center;
   align-items: center;
 }
 .mobileMenu {
-  padding: 40px 0 278px;
+  position: fixed;
+  top: 64px;
+  left: 0;
+  width: 100%;
+  height: calc(100vh - 64px);
+  background-color: var(--color-deco-light);
+  z-index: 1001;
   animation: slideDown 0.4s ease forwards;
+  padding: 0;
 }
 @keyframes slideDown {
   0% {
@@ -73,6 +77,7 @@
   margin: 0;
   padding: 0;
   display: flex;
+  margin-top: 32px;
 }
 .closeButton {
   border: 1px solid rgba(0, 0, 0, 0.05);
