Completed order page markup. Started to make logic of sending order form to backend server. Also fixed UserInfoForm component so it is able to write in all inputs and their color is visible

--- a/components/UserInfoForm/UserInfoForm.module.css
+++ b/components/UserInfoForm/UserInfoForm.module.css
@@ -30,6 +30,7 @@
     background-color: #f3f9ed;;
     font-size: 15px;
     outline: none;
+    color: var(--color-neutral-darkest);
     transition: border-color 0.25s ease;
 }
 
