--- a/app/(public routes)/order/order.module.css
+++ b/app/(public routes)/order/order.module.css
@@ -1,6 +1,5 @@
 .container {
     padding: 20px;
-    gap: 32px;
 }
 
 .title {
@@ -18,6 +17,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 32px;
 }
 
 .goods_list {
@@ -28,6 +28,69 @@
     width: 100%;
 }
 
+.order_form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form {
+    display: flex;
+    gap: 24px;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.comment_text {
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 16px;
+    padding: 12px;
+    max-width: 335px;
+    height: 180px;
+    background-color: transparent;
+    width: 100%;
+    color: var(--color-neutral-darkest);
+    font-family: var(--font-inter);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+}
+
+.comment_text::placeholder {
+    font-family: var(--font-inter);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #999;
+}
+
+.submit_button {
+    font-family: var(--font-inter);
+    border: 1px solid var(--color-deco);
+    background-color: var(--color-deco);
+    border-radius: 100px;
+    padding: 6px 12px;
+    max-width: 335px;
+    width: 100%;
+    height: 36px;
+    color: var(--color-neutral-darkest);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+}
+
+@media only screen and (min-width: 768px) {
+    .comment_text {
+        max-width: 704px;
+    }
+
+    .submit_button {
+        width: 100%;
+        max-width: none;
+    }
+
+}
+
 @media only screen and (min-width: 1440px) {
     .wrapper {
         display: flex;
@@ -36,8 +99,9 @@
         gap: 32px;
     }
 
-    .goods_list {
+    .goods_list, .comment_text {
         max-width: 640px;
     }
+
 }
 
