--- a/components/AllGoodsList/AllGoodsList.module.css
+++ b/components/AllGoodsList/AllGoodsList.module.css
@@ -76,3 +76,74 @@
   border: 1px solid var(--color-deco);
   background: var(--opacity-neutral-darkest-50);
 }
+@media screen and (min-width: 768px) {
+  .card {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+  .list {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .listItem {
+    width: 198px;
+    height: 423px;
+  }
+  .image {
+    width: 198px;
+    height: 244px;
+  }
+  .info {
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  .name {
+    font-size: 16px;
+    width: 198px;
+    margin-right: 0;
+    margin-bottom: 8px;
+  }
+  .price {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    margin-bottom: 16px;
+  }
+  .detail {
+    margin-top: 0;
+    width: 198px;
+    height: 40px;
+  }
+  .detailLink {
+    margin-top: auto;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .listItem {
+    width: 304px;
+    height: 519px;
+  }
+  .image {
+    width: 304px;
+    height: 375px;
+  }
+  .info {
+    flex-direction: row;
+  }
+  .name {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 150%;
+  }
+  .price {
+    font-weight: 600;
+    font-size: 20px;
+
+    line-height: 150%;
+  }
+  .detail {
+    width: 304px;
+    height: 40px;
+  }
+}
