--- a/components/SidebarFilter/SidebarFilter.module.css
+++ b/components/SidebarFilter/SidebarFilter.module.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 24px;
 }
 .filter {
   font-weight: 400;
@@ -27,9 +28,4 @@
   font-size: 14px;
   line-height: 150%;
   margin-bottom: 8px;
-}
-@media screen and (min-width: 1440px) {
-  .sidebarContainer {
-    width: 303px;
-  }
 }
