--- a/components/PaymentStatus/PaymentStatus.module.css
+++ b/components/PaymentStatus/PaymentStatus.module.css
@@ -1,8 +1,9 @@
 .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
 }
 
 .checkWrapper {
