add backend support

--- a/app/(public routes)/goods/[goodId]/ProductPage.module.css
+++ b/app/(public routes)/goods/[goodId]/ProductPage.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   gap: 24px;
 }
+
 .titleReviews {
   font-family: var(--second-family);
   font-weight: 400;
@@ -11,24 +12,33 @@
   letter-spacing: -0.01em;
   color: var(--color-scheme-4-text);
 }
+
 .addReviews {
   border: 1px solid var(--color-deco);
   border-radius: 100px;
   padding: 6px 12px;
-  width: 156px;
+  width: 100%;
   height: 36px;
   background: var(--color-deco);
   margin-bottom: 40px;
 }
+
+.noMargin {
+  margin-top: 12px;
+  margin-bottom: 0;
+}
+
 .addReviews:hover,
 .addReviews:focus {
   border: 1px solid var(--color-deco-darker);
   background: var(--color-deco-dark);
 }
+
 .addReviews:active {
   border: 1px solid var(--color-deco);
   background: var(--color-deco-darkest);
 }
+
 .modal {
   border-radius: 16px;
   padding: 40px 20px;
@@ -39,6 +49,7 @@
   stroke-width: 1px;
   stroke: var(--color-scheme-1-text);
 }
+
 .closeBtn {
   width: 32px;
   height: 32px;
@@ -49,6 +60,7 @@
   border: none;
   background-color: inherit;
 }
+
 .icon {
   fill: var(--color-white);
   stroke-width: 1px;
@@ -68,6 +80,7 @@
   z-index: 1000;
   padding: 1rem;
 }
+
 .titleModal {
   font-family: var(--second-family);
   font-weight: 400;
@@ -78,6 +91,7 @@
   color: var(--color-scheme-1-text);
   margin-bottom: 48px;
 }
+
 .form {
   width: 295px;
   height: 416px;
@@ -91,6 +105,7 @@
   color: var(--color-scheme-1-text);
   margin-bottom: 8px;
 }
+
 .input {
   border: 1px solid var(--opacity-neutral-darkest-15);
   border-radius: 16px;
@@ -104,6 +119,7 @@
   line-height: 150%;
   color: var(--opacity-neutral-darkest-60);
 }
+
 .textarea {
   border: 1px solid var(--opacity-neutral-darkest-15);
   border-radius: 16px;
@@ -118,6 +134,7 @@
   color: var(--opacity-neutral-darkest-60);
   resize: none;
 }
+
 .btnReviews {
   border: 1px solid var(--color-deco);
   border-radius: 100px;
@@ -132,11 +149,13 @@
   color: var(--color-neutral-darkest);
   margin-top: 24px;
 }
+
 .btnReviews:hover,
 .btnReviews:focus {
   border: 1px solid var(--color-deco-darker);
   background: var(--color-deco-dark);
 }
+
 .btnReviews:active {
   border: 1px solid var(--color-deco);
   background: var(--color-deco-darkest);
@@ -150,6 +169,7 @@
 .textareaError {
   border-color: #e63946;
 }
+
 .inpName {
   font-family: var(--font-family);
   font-weight: 400;
@@ -158,14 +178,41 @@
   color: var(--color-scheme-1-text);
   margin-bottom: 24px;
 }
+
 .inpBox {
   margin-bottom: 24px;
 }
+
+.emptyStateContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 16px;
+  padding: 24px 16px;
+  width: 335px;
+  height: 127px;
+  margin-bottom: 40px;
+  background: var(--color-deco-light);
+}
+
+.emptyStateTitle {
+  width: 303px;
+  height: 27px;
+  font-family: var(--font-family);
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 150%;
+  text-align: center;
+  color: var(--color-scheme-1-text);
+}
+
 @media screen and (min-width: 375px) {
   .form {
     margin: 0 auto;
   }
 }
+
 @media screen and (min-width: 768px) {
   .goodsReviews {
     display: flex;
@@ -174,14 +221,17 @@
     align-items: center;
     margin-bottom: 40px;
   }
+
   .addReviews {
     margin-bottom: 0;
+    width: 156px;
   }
 
   .form {
     width: 576px;
     height: 416px;
   }
+
   .input {
     width: 576px;
     height: 40px;
@@ -191,10 +241,22 @@
     width: 576px;
     height: 180px;
   }
+
   .btnReviews {
     display: block;
     width: 105px;
     align-items: center;
     margin: 24px auto 0;
   }
+
+  .emptyStateContainer {
+    width: 753px;
+  }
+}
+
+.loading {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
