Fixed UserInfoForm styles so it uses right widths, provided next/navigation router to order page so it will move you to payment page and made it pushing you to your profile or main page if you're not authenticated

--- a/app/(public routes)/order/order.module.css
+++ b/app/(public routes)/order/order.module.css
@@ -26,12 +26,14 @@
     align-items: center;
     gap: 24px;
     width: 100%;
+    max-width: 335px;
 }
 
 .order_form {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    width: 100%;
+    max-width: 335px;
 }
 
 .form {
@@ -100,6 +102,20 @@
         max-width: none;
     }
 
+    .order_form {
+        align-items: center;
+    }
+
+}
+
+@media only screen and (min-width: 768px) {
+    .goods_list {
+        max-width: 704px;
+    }
+    
+    .order_form {
+        max-width: 704px;
+    }
 }
 
 @media only screen and (min-width: 1440px) {
